# SAPIS-Resolver

./: CMakeLists.txt  README.md
example/sapisresolver/: CMakeLists.txt
example/sapisresolver_header_only/: CMakeLists.txt  main.cpp
include/apiset/: resolver.h
include/apiset/impl/: apisetv6  resolver.cpp
test/: resolver.cpp
